--- a/biography.html
+++ b/biography.html
@@ -41,8 +41,8 @@ and have the document popup rather than have it lead you to a follow up question
 was none other than Lisa Gilligan's son, Larry. Larry is a Liquor Merchandiser. Like the previous testers, he has no legal expierence. 
 Unlike the previous two, Larry did have a rough understanding of what my goal was for the bot. Larry was able to give a valusable 
 suggestion; the user should have an option to consult an attorney at multiple stages of LG_Prime.
-All  test user feedback can be found at:https://pgenovese95.github.io/ctl_final/user_feedback
-Mrs. Gilligan's feedback can be found at :https://pgenovese95.github.io/ctl_final/client_feedback
+All  test user feedback can be found at:https://github.com/pgenovese95/ctl_final/blob/master/user_feedback
+Mrs. Gilligan's feedback can be found at :https://github.com/pgenovese95/ctl_final/blob/master/client_feedback
 
 
 ###Refinement
